# ciss-ladder-transport

./: .zenodo.json  AUTHORS.md  CITATION.cff  LICENSE  MAPPING_LEGACY_TO_CLEAN.md  README.md  SUMMARY.md  TECHNICAL_NOTE.md  conformal_lapse_conjecture.py  conformal_lapse_conjecture_4D.py  conformal_lapse_elliptic_compensation.py  fix_paths.py  pyproject.toml  references.bib  requirements.txt  temp_architect.md
.claude/: settings.local.json
audit_workspace/: compare_old_new_integration.py  current_dat_david_n_dephasing_FIXED.py  current_dat_david_n_disorder_FIXED.py  generate_all.py  manuscript_CORRECTED.aux  manuscript_CORRECTED.tex  manuscript_CORRECTEDNotes.bib  report.md  test_matrix.py  trans_cadena_bi_GZ_dephasing_rebuilt.py
ciss_numerical_protocol/: CHIRAL_PHYSICAL_POLARIZATION_SEARCH_REPORT.md  PHYSICAL_POLARIZATION_SEARCH_REPORT.md  articulov3_optionB_step6_numerical_protocol.aux
ciss_validation/: README.md  ciss_chiral_physical_search.py  ciss_chiral_physical_search_parallel.py  ciss_find_90_observable.py  ciss_full_validation.py  ciss_legacy_notebook_audit.py  ciss_logic_z3.py  ciss_numeric_benchmark.py  ciss_physical_finalize_from_raw.py  ciss_physical_polarization_search.py  ciss_symbolic_audit.py  ciss_verify_top90_exact.py  numeric_quick_output.txt  requirements.txt  scan_output.txt  symbolic_audit_output.txt  z3_logic_output.txt
configs/: disorder_current_example.json
docs/: google_colab.md  mapping_legacy_to_clean.md  physics_conventions.md  publication_checklist.md  release_notes_v0.1.0.md  release_notes_v0.1.3.md  reproducibility.md  (+1 more)
(+84 files in other folders)
